fix show page alignment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,13 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
 body{
      font-family: "Plus Jakarta Sans", sans-serif !important;
      display: flex;
